Fixed gallery clipping with header

--- a/styles/style.css
+++ b/styles/style.css
@@ -14,6 +14,7 @@ header {
   background-color: rgb(69, 69, 69);
   padding-top: 0px;
   margin-bottom: 0px;
+  z-index: 1;
 }
 
 .bottomheader {
@@ -23,6 +24,7 @@ header {
   padding-bottom: 10px;
   display: block;
   margin-top: 0px;
+  z-index: 1;
 }
 
 .footer {
